(FRONT) validation, debut creation crime

--- a/interface/src/app/pages/crimes/creation/creation.html
+++ b/interface/src/app/pages/crimes/creation/creation.html
@@ -1,1 +1,124 @@
-creation du bayou
+<div class="widgets">
+
+    <div class="row">
+        <div class="col-md-12">
+            <div ba-panel ba-panel-title="Save a new crime" ba-panel-class="with-scroll">
+                <ba-wizard>
+                    <ba-wizard-step title="Identification" form="vm.personalInfoForm">
+                        <form name="vm.personalInfoForm" novalidate>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group has-feedback"
+                                         title="Internal BPD report number">
+                                         <label  for="exampleUsername1">Compnos</label>
+                                        <input type="text" class="form-control" id="exampleUsername1" name="compnos"  ng-model="form.compnos" required>
+                                    </div>
+                                    <div class="form-group" >
+                                        <label for="exampleInputEmail1">Nature Code</label>
+                                        <input type="text" class="form-control" id="exampleInputEmail1" name="nature_code"  ng-model="form.nature_code" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div title="BPD	incident classification" class="form-group">
+                                        <label for="exampleInputPassword1">Incident Type Description</label>
+                                        <input type="text" class="form-control" id="exampleInputPassword1" name="incident_type_description" ng-model="form.incident_type_description" >
+                                    </div>
+                                    <div title="BRIC classifica6on of the crime code for analysis purposes" class="form-group">
+                                        <label for="exampleInputConfirmPassword1">Main Crimecode</label>
+                                        <input type="text" class="form-control" id="exampleInputConfirmPassword1" name="main_crimecode" ng-model="form.main_crimecode">
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </ba-wizard-step>
+                    <ba-wizard-step title="Localisation" form="vm.productInfoForm">
+                        <form name="vm.productInfoForm" novalidate>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group has-feedback">
+                                         <label for="cooX">X</label>
+                                        <input type="text" class="form-control" id="cooX" name="productName" ng-model="form.x" required>
+                                        <span class="help-block error-block basic-block">Required</span>
+                                    </div>
+                                    <div class="form-group" >
+                                        <label for="cooY">Y</label>
+                                        <input type="text" class="form-control" id="cooY" name="productId" ng-model="form.y" required>
+                                        <span class="help-block error-block basic-block">Required</span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group has-feedback">
+                                        <label for="streetname">Street Name</label>
+                                        <input type="text" class="form-control" id="streetname" name="productName" ng-model="form.streetname" required>
+                                    </div>
+                                    <div class="form-group" >
+                                        <label for="xstreetname">Cross Street Name (optional)</label>
+                                        <input type="text" class="form-control" id="xstreetname" name="productId" ng-model="form.xstreetname" required>
+
+                                </div>
+                            </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group has-feedback">
+                                        <label for="reptDistrict">Reptorted District</label>
+                                        <input type="text" class="form-control" id="reptDistrict" name="reptDistrict"  ng-model="vm.productInfo.productName" required>
+                                        <span class="help-block error-block basic-block">Required</span>
+                                    </div>
+                                    <div class="form-group" >
+                                        <label for="reporting_area">Reporting Area</label>
+                                        <input type="text" class="form-control" id="reporting_area" name="reporting_area" ng-model="vm.productInfo.productId" required>
+                                        <span class="help-block error-block basic-block">Required</span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <div class="form-group" >
+                                            <label for="localisation">Localisation</label>
+                                            <input type="text" class="form-control" id="localisation" ng-model="vm.productInfo.productId" required>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </ba-wizard-step>
+                    <ba-wizard-step title="Time"  form="vm.addressForm">
+                        <form name="vm.addressForm" novalidate>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group has-feedback"
+                                         ng-class="{'has-error': vm.addressForm.address.$invalid && (vm.addressForm.address.$dirty || vm.addressForm.$submitted)}">
+                                        <label for="productName">Shipment address</label>
+                                        <input type="text" class="form-control" id="address" name="address" placeholder="Shipment address" ng-model="vm.shipment.address" required>
+                                        <span class="help-block error-block basic-block">Required</span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="productName">Shipment method</label>
+                                        <select class="form-control" title="Category" selectpicker>
+                                            <option selected>Fast & expensive</option>
+                                            <option>Cheap & free</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="checkbox">
+                                <label class="custom-checkbox">
+                                    <input type="checkbox">
+                                    <span>Save shipment info</span>
+                                </label>
+                            </div>
+                        </form>
+                    </ba-wizard-step>
+                    <ba-wizard-step title="Details">
+                        <form class="form-horizontal" name="vm.finishForm" novalidate>
+                            Congratulations! You have successfully filled the form!
+                        </form>
+                    </ba-wizard-step>
+                </ba-wizard>
+            </div>
+        </div>
+    </div>
+
+</div>
