(FRONT) finishing crime creation

--- a/interface/src/app/auth/views/auth.view.html
+++ b/interface/src/app/auth/views/auth.view.html
@@ -5,7 +5,7 @@
   <div class="panel-title">Sign in to Crime Desktop</div>
 </div>
 <div class="panel-body">
-  <a href="reg.html" class="auth-link">New to Blur Admin? Sign up!</a>
+  <a ng-click="toSignUp()" class="auth-link">New to Crime Desktop? Sign up!</a>
 
   <form class="form-horizontal">
     <div class="form-group">
