--- a/interface/src/app/pages/crimes/creation/creation.html
+++ b/interface/src/app/pages/crimes/creation/creation.html
@@ -11,25 +11,25 @@
                                     <div class="form-group has-feedback"
                                          title="Internal BPD report number">
                                          <label  for="exampleUsername1">Compnos</label>
-                                        <input type="number" class="form-control" id="exampleUsername1" name="compnos"  ng-model="form.compnos" >
+                                        <input type="number" class="form-control" style="background-color: white"  id="exampleUsername1" name="compnos"  ng-model="form.compnos" >
                                     </div>
                                     <div class="form-group" >
                                         <label for="exampleInputEmail1">Nature Code</label>
-                                        <input type="text" class="form-control" id="exampleInputEmail1" name="nature_code"  ng-model="form.naturecode" >
+                                        <input type="text" class="form-control" style="background-color: white"  id="exampleInputEmail1" name="nature_code"  ng-model="form.naturecode" >
                                     </div>
                                     <div class="form-group has-feedback">
                                         <label for="ucrpart">UCR Part</label>
-                                        <input type="number" min="1" max="3" step="1" value="1"  class="form-control" id="ucrpart" name="ucrpart" ng-model="form.ucrpart" >
+                                        <input type="number" min="1" max="3" step="1" value="1"  class="form-control" style="background-color: white"  id="ucrpart" name="ucrpart" ng-model="form.ucrpart" >
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div title="BPD	incident classification" class="form-group">
                                         <label for="exampleInputPassword1">Incident Type Description</label>
-                                        <input type="text" class="form-control" id="exampleInputPassword1" name="incident_type_description" ng-model="form.incident_type_description" >
+                                        <input type="text" class="form-control" style="background-color: white"  id="exampleInputPassword1" name="incident_type_description" ng-model="form.incident_type_description" >
                                     </div>
                                     <div title="BRIC classifica6on of the crime code for analysis purposes" class="form-group">
                                         <label for="exampleInputConfirmPassword1">Main Crimecode</label>
-                                        <input type="text" class="form-control" id="exampleInputConfirmPassword1" name="main_crimecode" ng-model="form.main_crimecode">
+                                        <input type="text" class="form-control" style="background-color: white"  id="exampleInputConfirmPassword1" name="main_crimecode" ng-model="form.main_crimecode">
                                     </div>
                                 </div>
                             </div>
@@ -41,21 +41,21 @@
                                 <div class="col-md-6">
                                     <div class="form-group has-feedback">
                                          <label for="cooX">X</label>
-                                        <input type="number" class="form-control" id="cooX" name="productName" ng-model="form.x" >
+                                        <input type="number" class="form-control" style="background-color: white"  id="cooX" name="productName" ng-model="form.x" >
                                     </div>
                                     <div class="form-group" >
                                         <label for="cooY">Y</label>
-                                        <input type="number" class="form-control" id="cooY" name="productId" ng-model="form.y" >
+                                        <input type="number" class="form-control" style="background-color: white"  id="cooY" name="productId" ng-model="form.y" >
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group has-feedback">
                                         <label for="streetname">Street Name</label>
-                                        <input type="text" class="form-control" id="streetname" name="productName" ng-model="form.streetname" >
+                                        <input type="text" class="form-control" style="background-color: white"  id="streetname" name="productName" ng-model="form.streetname" >
                                     </div>
                                     <div class="form-group" >
                                         <label for="xstreetname">Cross Street Name (optional)</label>
-                                        <input type="text" class="form-control" id="xstreetname" name="productId" ng-model="form.xstreetname" >
+                                        <input type="text" class="form-control" style="background-color: white"  id="xstreetname" name="productId" ng-model="form.xstreetname" >
 
                                 </div>
                             </div>
@@ -64,18 +64,18 @@
                                 <div class="col-md-6">
                                     <div class="form-group has-feedback">
                                         <label for="reptdistrict">Reptorted District</label>
-                                        <input type="text" class="form-control" id="reptdistrict" name="reptdistrict"  ng-model="form.reptdistrict" >
+                                        <input type="text" class="form-control" style="background-color: white"  id="reptdistrict" name="reptdistrict"  ng-model="form.reptdistrict" >
                                     </div>
                                     <div class="form-group" >
                                         <label for="reporting_area">Reporting Area</label>
-                                        <input type="number" class="form-control" id="reporting_area" name="reporting_area" ng-model="form.reportingarea" >
+                                        <input type="number" class="form-control" style="background-color: white"  id="reporting_area" name="reporting_area" ng-model="form.reportingarea" >
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <div class="form-group" >
                                             <label for="localisation">Localisation</label>
-                                            <input type="text" class="form-control" id="localisation" ng-model="form.location" >
+                                            <input type="text" class="form-control" style="background-color: white"  id="localisation" ng-model="form.location" >
                                         </div>
                                     </div>
                                 </div>
@@ -88,17 +88,17 @@
                                 <div class="col-md-6">
                                     <div class="form-group has-feedback">
                                         <label for="year">Year</label>
-                                        <input type="number" min="1800" max="2100" step="1" value="2017" class="form-control" id="year" name="year" ng-model="form.year" required>
+                                        <input type="number" min="1800" max="2100" step="1" value="2017" class="form-control" style="background-color: white"  id="year" name="year" ng-model="form.year" required>
                                         <span class="help-block error-block basic-block">Required</span>
                                     </div>
                                     <div class="form-group has-feedback">
                                         <label for="month">Month</label>
-                                        <input type="number" min="1" max="12" step="1" value="1"  class="form-control" id="month" name="address" ng-model="form.month" required>
+                                        <input type="number" min="1" max="12" step="1" value="1"  class="form-control" style="background-color: white"  id="month" name="address" ng-model="form.month" required>
                                         <span class="help-block error-block basic-block">Required</span>
                                     </div>
                                     <div class="form-group has-feedback">
                                         <label for="day_week">Day Week</label>
-                                        <select class="form-control" id="day_week" ng-model="form.day_week" title="Day in week" selectpicker>
+                                        <select class="form-control" style="background-color: white"  id="day_week" ng-model="form.day_week" title="Day in week" selectpicker>
                                             <option selected>Sunday</option>
                                             <option>Monday</option>
                                             <option>Tuesday</option>
@@ -113,7 +113,7 @@
                                         <div class="form-group">
                                             <label for="datefrom">Date from</label>
                                             <p class="input-group">
-                                                <input type="text" class="form-control" uib-datepicker-popup="{{format}}" datepicker-options="options" ng-model="dt" is-open="opened" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" show-button-bar="false" />
+                                                <input type="text" class="form-control" style="background-color: white"  uib-datepicker-popup="{{format}}" datepicker-options="options" ng-model="dt" is-open="opened" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" show-button-bar="false" />
                                                 <span class="input-group-btn">
                                                     <button type="button" class="btn btn-default" ng-click="open()">
                                                         <i class="glyphicon glyphicon-calendar"></i>
@@ -123,7 +123,7 @@
                                         </div>
                                         <div class="form-group has-feedback">
                                             <label for="shift">Shift</label>
-                                            <select class="form-control" id="shift" ng-model="form.shift" title="Shift" selectpicker>
+                                            <select class="form-control" style="background-color: white"  id="shift" ng-model="form.shift" title="Shift" selectpicker>
                                                 <option selected>Day</option>
                                                 <option>First</option>
                                                 <option>Last</option>
@@ -154,7 +154,7 @@
                                     <div class="col-md-6">
                                         <div class="form-group" >
                                                     <label for="weapon_type">Weapon Type</label>
-                                                    <input type="text" class="form-control" id="weapon_type" ng-model="form.weapon_type" >
+                                                    <input type="text" class="form-control" style="background-color: white"  id="weapon_type" ng-model="form.weapon_type" >
                                         </div>
                                     </div>
                                 </div>
