--- a/interface/src/app/auth/views/reg.view.html
+++ b/interface/src/app/auth/views/reg.view.html
@@ -1,10 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="panel-heading">
+    <div class="panel-title">Sign up to Crime Desktop</div>
+</div>
+<div class="panel-body">
+        <a ng-click="toSignIn()" class="auth-link">Already have a Crime Desktop account? Sign in!</a>
 
-</body>
-</html>
+        <form class="form-horizontal">
+            <center style="color: darkred;" ng-if="formEmpty">Please fill all the form</center>
+            <div class="form-group">
+                <label for="username" class="col-sm-2 control-label">Username</label>
+
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="username" ng-model="form.username">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="mail" class="col-sm-2 control-label">Email</label>
+
+                <div class="col-sm-10">
+                    <input type="email" class="form-control" id="mail" ng-model="form.mail">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="pass" class="col-sm-2 control-label">Password</label>
+
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" id="pass" ng-model="form.password">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="rpass" class="col-sm-2 control-label">Repeat</label>
+
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" id="rpass" ng-model="form.rpass">
+                    <span style="color: darkred" ng-if="passwordNotMatch">Password does not match</span>
+                </div>
+            </div>
+
+            <div class="form-group has-feedback">
+                <label for="rank">Required Rank</label>
+                <select class="form-control" style="background-color: white"  id="rank" ng-model="form.rank"  selectpicker>
+                    <option selected>Agent</option>
+                    <option selected>Detective</option>
+                    <option selected>Police Chief</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" ng-click="signUp()" class="btn btn-default btn-auth">Sign up</button>
+                </div>
+            </div>
+        </form>
+
+        <div class="auth-sep"><span><span>or Sign up with one click</span></span></div>
+    </div>
